[package]
name = "leb-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
truncrate = "0.1.3"
tokio = { version = "1", features = ["full"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
wikipedia_api = {git = "https://github.com/El-Wumbus/wikipedia_api"}